# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  start.sh
.github/workflows/: page-analyzer-check.yml
page_analyzer/: __init__.py  app.py  database.py  tools.py
page_analyzer/scripts/: main.py
page_analyzer/templates/: index.html  urls.html
page_analyzer/templates/urls/: checks.html  errors.html  new.html  show.html  urls.html
templates/: index.html
